--- a/app/src/main/res/layout/portal.xml
+++ b/app/src/main/res/layout/portal.xml
@@ -21,12 +21,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.819"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
-    <VideoView
-        android:id="@+id/portalView"
-        android:layout_width="297dp"
-        android:layout_height="264dp"
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="235dp"
+        android:layout_height="270dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@null"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/portalBtn"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,5 +39,9 @@
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent">
+
+    </WebView>
+
+
 </android.support.constraint.ConstraintLayout>
