Animation des Portals funktioniert nun, aber der Timer leider nicht. Weiterhin habe ich irgendetwas übersehen bei der Funktion des Buttons. Ich komme nicht zurück in die Main Activity.

--- a/app/src/main/res/layout/portal.xml
+++ b/app/src/main/res/layout/portal.xml
@@ -43,5 +43,12 @@
 
     </WebView>
 
+    <pl.droidsonroids.gif.GifImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/portal2"
+        />
+
+
 
 </android.support.constraint.ConstraintLayout>
