--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -16,10 +16,9 @@
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="102dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="169dp"
-        android:layout_marginRight="102dp" />
+        android:layout_marginBottom="170dp"
+        android:layout_marginRight="138dp" />
 
     <Button
         android:id="@+id/gerade"
@@ -30,19 +29,20 @@
         tools:layout_constraintTop_creator="1"
         app:layout_constraintTop_toBottomOf="@+id/ungerade"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/ungerade" />
+        app:layout_constraintLeft_toLeftOf="@+id/ungerade"
+        android:layout_marginLeft="9dp"
+        android:layout_marginTop="0dp" />
 
     <TextView
         android:id="@+id/output"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="162dp"
         android:layout_marginTop="90dp"
-        tools:layout_constraintLeft_creator="1"
+        android:text=""
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="162dp" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginLeft="205dp" />
 
 </android.support.constraint.ConstraintLayout>
