--- a/app/src/main/res/layout/portal.xml
+++ b/app/src/main/res/layout/portal.xml
@@ -26,10 +26,16 @@
         android:layout_marginEnd="8dp" />
 
     <pl.droidsonroids.gif.GifImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="373dp"
+        android:layout_height="324dp"
         android:src="@drawable/portal2"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.0" />
 
 
 
