--- a/app/src/main/res/layout/monster.xml
+++ b/app/src/main/res/layout/monster.xml
@@ -28,7 +28,6 @@
     <pl.droidsonroids.gif.GifImageView
         android:layout_width="373dp"
         android:layout_height="324dp"
-        android:src="@drawable/monster"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
@@ -36,6 +35,7 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.0" />
+    <!--android:src="@drawable/monster"-->
 
 
 
