--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -15,6 +15,7 @@
         android:layout_height="31dp"
         android:orientation="horizontal">
 
+
         <TextView
             android:id="@+id/nameServer"
             android:layout_width="wrap_content"
@@ -351,16 +352,18 @@
             android:layout_weight="1"
             android:layout_height="match_parent" />
 
-        <Button
+        <ImageButton
             android:id="@+id/rollClient"
+            android:src = "@drawable/d0"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:visibility="invisible" />
     </LinearLayout>
 
-    <Button
+    <ImageButton
         android:id="@+id/rollServer"
+        android:src="@drawable/d0"
         android:layout_width="62dp"
         android:layout_height="34dp"
         android:visibility="invisible" />
