Funktionierender Würfel ohne Sensor

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -351,16 +351,18 @@
             android:layout_weight="1"
             android:layout_height="match_parent" />
 
-        <Button
+        <ImageView
             android:id="@+id/rollClient"
+            android:src="@drawable/d0"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:visibility="invisible" />
     </LinearLayout>
 
-    <Button
+    <ImageView
         android:id="@+id/rollServer"
+        android:src="@drawable/d0"
         android:layout_width="62dp"
         android:layout_height="34dp"
         android:visibility="invisible" />
