--- a/app/src/main/res/layout/activity_server.xml
+++ b/app/src/main/res/layout/activity_server.xml
@@ -22,6 +22,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/name"
+            android:textColor="@color/colorRed"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
