--- a/app/src/main/res/layout/monster.xml
+++ b/app/src/main/res/layout/monster.xml
@@ -13,29 +13,35 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         android:text="Flüchte!"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.819"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        app:layout_constraintHorizontal_bias="0.927"
+        app:layout_constraintLeft_toRightOf="@+id/gifImageView2"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.461" />
 
     <pl.droidsonroids.gif.GifImageView
-        android:layout_width="373dp"
-        android:layout_height="324dp"
+        android:layout_width="346dp"
+        android:layout_height="306dp"
+        android:src="@drawable/monster"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="0dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
-    <!--android:src="@drawable/monster"-->
+        app:layout_constraintHorizontal_bias="0.034"
+        android:id="@+id/gifImageView2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.355" />
+
 
 
 
