--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -24,7 +24,8 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:layout_weight="7"
-                android:weightSum="10">
+                android:weightSum="10"
+                android:background="@drawable/wall">
 
                 <TextView
                     android:id="@+id/nameServer"
@@ -33,12 +34,15 @@
                     android:layout_weight=""
                     android:gravity="center"
                     android:text="TextView"
-                    android:layout_margin="30dp"/>
+                    android:layout_marginTop="30dp"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp" />
 
                 <ImageView
                     android:id="@+id/picServer"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="5dp"
                     android:layout_gravity="center"
                     android:background="@drawable/knight_red"/>
 
@@ -49,7 +53,7 @@
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_weight="1"
-                    android:layout_marginTop="90dp"
+                    android:layout_marginTop="50dp"
                     android:layout_gravity="center"
                     android:visibility="invisible" />
 
@@ -57,11 +61,12 @@
 
 
             <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="7"
-        android:layout_weight="4">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:weightSum="7"
+                android:layout_weight="4"
+                android:background="@drawable/sky">
 
 
     <LinearLayout
@@ -401,7 +406,8 @@
                                 android:layout_height="match_parent"
                                 android:orientation="vertical"
                                 android:layout_weight="7"
-                                android:weightSum="10">
+                                android:weightSum="10"
+                                android:background="@drawable/wall_r">
 
                             <TextView
                                 android:id="@+id/nameClient"
@@ -410,12 +416,15 @@
                                 android:layout_weight=""
                                 android:gravity="center"
                                 android:text="TextView"
-                                android:layout_margin="30dp"/>
+                                android:layout_marginTop="30dp"
+                                android:layout_marginLeft="30dp"
+                                android:layout_marginRight="30dp" />
 
                                 <ImageView
                                     android:id="@+id/picClient"
-                                    android:layout_width="70dp"
-                                    android:layout_height="70dp"
+                                    android:layout_width="100dp"
+                                    android:layout_height="100dp"
+                                    android:layout_marginTop="5dp"
                                     android:layout_gravity="center"
                                     android:background="@drawable/knight_blue"/>
 
@@ -426,7 +435,7 @@
                                 android:layout_width="70dp"
                                 android:layout_height="70dp"
                                 android:layout_weight="1"
-                                android:layout_marginTop="90dp"
+                                android:layout_marginTop="50dp"
                                 android:layout_gravity="center"
                                 android:visibility="invisible" />
                         </LinearLayout>
