--- a/app/src/main/res/layout/portal.xml
+++ b/app/src/main/res/layout/portal.xml
@@ -16,26 +16,28 @@
         android:layout_marginTop="8dp"
         android:text="Gehe durch das Portal!"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.819"
+        app:layout_constraintVertical_bias="0.448"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        app:layout_constraintHorizontal_bias="0.982"
+        app:layout_constraintLeft_toRightOf="@+id/gifImageView4" />
 
     <pl.droidsonroids.gif.GifImageView
-        android:layout_width="373dp"
-        android:layout_height="324dp"
+        android:layout_width="423dp"
+        android:layout_height="345dp"
         android:src="@drawable/portal2"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.0"
+        android:id="@+id/gifImageView4" />
 
 
 
