Layoutproblem bei der Anleitung endlich behoben Text kommt noch

--- a/app/src/main/res/layout/lose.xml
+++ b/app/src/main/res/layout/lose.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/backMenuBtn"
+        android:id="@+id/backMenuBtnn"
         android:layout_width="112dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
