--- a/app/src/main/res/layout/anleitung.xml
+++ b/app/src/main/res/layout/anleitung.xml
@@ -4,128 +4,104 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:layout_editor_absoluteY="25dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <TextView
         android:id="@+id/TextView01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         android:text="Spielanleitung:"
         android:textAllCaps="false"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.016"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"></TextView>
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/TextView02"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.016"
+        app:layout_constraintVertical_bias="0.0"></TextView>
 
     <TextView
         android:id="@+id/TextView02"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         android:text="Credits:"
         android:textAllCaps="false"
         android:textStyle="bold"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.041"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.643"
-        app:layout_constraintTop_toBottomOf="@+id/TextView01"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"></TextView>
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/TextView01"
+        app:layout_constraintHorizontal_bias="0.0"></TextView>
 
     <Button
         android:id="@+id/backMenuBtn"
         android:layout_width="112dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Zurück =)"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <ScrollView
-        android:id="@+id/textAreaScroller2"
-        android:layout_width="240dp"
-        android:layout_height="69dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_x="0px"
-        android:layout_y="25px"
-        android:scrollbars="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintLeft_toRightOf="@+id/TextView02"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintRight_toLeftOf="@+id/backMenuBtn"
-        app:layout_constraintTop_toBottomOf="@+id/textAreaScroller"
-        tools:layout_editor_absoluteY="209dp"
-        tools:layout_editor_absoluteX="153dp">
-
-        <TextView
-            android:id="@+id/TextView04"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="hdasjhdslkahdjlkahdkashdskajshkadsdhakjhadkdalkjlkhhhhhhhhhhkhkhkjhjgff.
-    "
-            tools:layout_editor_absoluteX="150dp"
-            tools:layout_editor_absoluteY="255dp"></TextView>
-    </ScrollView>
-
-    <ScrollView
-        android:id="@+id/textAreaScroller"
-        android:layout_width="434dp"
-        android:layout_height="169dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_x="0px"
-        android:layout_y="25px"
-        android:scrollbars="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.75"
-        app:layout_constraintLeft_toRightOf="@+id/TextView01"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.119"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1">
+        app:layout_constraintVertical_bias="1.0" />
 
-        <TextView
-            android:id="@+id/TextView03"
-            android:layout_width="wrap_content"
-            android:layout_height="54dp"
-            android:text="section 1 :...text...text...text...text...text...text...text...text...text...
+    <LinearLayout
+        android:layout_width="468dp"
+        android:layout_height="296dp"
+        android:orientation="vertical"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/backMenuBtn"
+        app:layout_constraintLeft_toRightOf="@+id/TextView01"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.503"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="-6dp"
+        tools:layout_editor_absoluteX="114dp">
+
+        <ScrollView
+            android:id="@+id/textAreaScroller"
+            android:layout_width="462dp"
+            android:layout_height="126dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_x="0px"
+            android:layout_y="25px"
+            android:scrollbars="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/textAreaScroller2"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toRightOf="@+id/TextView01"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
+
+            <TextView
+                android:id="@+id/TextView03"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="section 1 :...text...text...text...text...text...text...text...text...text...
     text...text...text...text...text...text...text...text...text...text...
     text...text...text...text...text...text...text...text...text...text...
     text...text...text...text...text...text...text...text...text...text...
@@ -135,45 +111,42 @@
     text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...
     text...text...text...text...text...text...text...text...text...text...
     text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...text...
-    text...text...text...text...text...text...text...text...text...text...
+    ..text...
     text...text...text...text...text...text...text...text...text...text...
     text...text...text...text...text...text...text...text...text...text...
     text...text...text...text...text...text...text...text...text...text...
     text...text...text...text...text...text...text...text...text...text...
     text...text...text...text...text...text...text...text...text...text..."
-            tools:layout_editor_absoluteX="195dp"
-            tools:layout_editor_absoluteY="8dp"></TextView>
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_editor_absoluteY="8dp"></TextView>
+        </ScrollView>
 
-    </ScrollView>
+        <ScrollView
+            android:id="@+id/textAreaScroller2"
+            android:layout_width="229dp"
+            android:layout_height="129dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_x="0px"
+            android:layout_y="25px"
+            android:scrollbars="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent">
 
-
-
-
-
-
+            <TextView
+                android:id="@+id/txtCredits"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="hdasjhdslkahdjlkahdkashdskajshkadsdhakjhadkdalkjlkhhhhhhhhhhkhkhkjhjgff.
+    "
+                tools:layout_editor_absoluteX="150dp"
+                tools:layout_editor_absoluteY="255dp"></TextView>
+        </ScrollView>
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
