Text für die Spielanleitung nochmal geändert, weil es auf dem Handy komisch dargestellt wird

--- a/app/src/main/res/layout/anleitung.xml
+++ b/app/src/main/res/layout/anleitung.xml
@@ -173,12 +173,7 @@ Und nun VIEL SPAß beim SPIELEN!!! :)
                 android:id="@+id/txtCredits"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="T_Industries besteht aus:
-                             Michael Kloss - Architektur Lead​
-                             Engin Orhan - GUI Lead​
-                             Daniel Rieder - Test Lead​
-                             Jasmin Stuck - Projektmanagement Lead​
-                             Sarah Wachter - Development Lead​"
+                android:text="T_Industries besteht aus: Michael Kloss​, Engin Orhan, Daniel Rieder, Jasmin Stuck,sowie Sarah Wachter"
                 tools:layout_editor_absoluteX="150dp"
                 tools:layout_editor_absoluteY="255dp"></TextView>
         </ScrollView>
