--- a/app/src/main/res/layout/anleitung_alt.xml
+++ b/app/src/main/res/layout/anleitung_alt.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:layout_editor_absoluteY="25dp"
     tools:layout_editor_absoluteX="0dp"
-    android:gravity="center_horizontal">
+    >
 
 
     <Button
@@ -29,7 +29,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="272dp"
         android:layout_marginBottom="14dp"
         android:orientation="vertical"
