--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -35,22 +35,23 @@
                     android:layout_margin="30dp"/>
 
                 <ImageView
-                    android:id="@+id/picServer"
+                    android:id="@+id/btnCheatServer"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/knight_red"/>
-
+                    android:background="@android:drawable/ic_dialog_alert"
+                    android:visibility="invisible" />
 
                 <ImageView
                     android:id="@+id/rollServer"
-                    android:src="@drawable/d0"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
-                    android:layout_weight="1"
-                    android:layout_marginTop="90dp"
                     android:layout_gravity="center"
+                    android:layout_marginTop="90dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/d0"
                     android:visibility="invisible" />
+
 
             </LinearLayout>
 
@@ -402,7 +403,7 @@
                                 android:layout_weight="7"
                                 android:weightSum="10">
 
-                            <TextView
+                                <TextView
                                 android:id="@+id/nameClient"
                                 android:layout_width="70dp"
                                 android:layout_height="wrap_content"
@@ -411,14 +412,15 @@
                                 android:layout_margin="30dp"/>
 
                                 <ImageView
-                                    android:id="@+id/picClient"
+                                    android:id="@+id/btnCheatClient"
                                     android:layout_width="70dp"
                                     android:layout_height="70dp"
                                     android:layout_gravity="center"
-                                    android:background="@drawable/knight_blue"/>
+                                    android:background="@android:drawable/ic_dialog_alert"
+                                    android:visibility="invisible" />
 
 
-                            <ImageView
+                                <ImageView
                                 android:id="@+id/rollClient"
                                 android:src="@drawable/d0"
                                 android:layout_width="70dp"
@@ -427,7 +429,8 @@
                                 android:layout_marginTop="90dp"
                                 android:layout_gravity="center"
                                 android:visibility="invisible" />
-                        </LinearLayout>
+
+                            </LinearLayout>
 
 
                     </LinearLayout>
