Adaptierungen für die GameActivity: Schummelfunktion überarbeitet: Wegen Kommunikation nochmal gründlich umbearbeitet. Layout

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -34,7 +34,6 @@
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
                     android:layout_marginTop="30dp"
-                    android:layout_weight=""
                     android:gravity="center"
                     android:text="TextView" />
 
@@ -61,7 +60,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
-                    android:layout_weight="center"
                     android:text="Enttarnen"
                     android:textColor="@color/colorBlack"
                     android:visibility="invisible"/>
@@ -521,7 +519,6 @@
                             android:layout_marginLeft="30dp"
                             android:layout_marginRight="30dp"
                             android:layout_marginTop="30dp"
-                            android:layout_weight=""
                             android:gravity="center"
                             android:text="TextView" />
 
@@ -549,10 +546,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="40dp"
-                            android:layout_weight="center"
-                            android:text="risk1"
+                            android:text="Enttarnen"
                             android:textColor="@color/colorBlack"
-                            android:visibility="invisible"/>
+                            android:visibility="invisible" />
                     </LinearLayout>
                             
 
