--- a/app/src/main/res/layout/anleitung.xml
+++ b/app/src/main/res/layout/anleitung.xml
@@ -113,41 +113,72 @@
                 android:layout_height="wrap_content"
                 android:text="
 Vorbereitung:
+
 Ein Spieler stellt mit seinem Smartphone einen Hotspot bereit und
+
 der Mitspieler verbindet sich dann via WLAN mit diesem Smartphone.
-Nachdem Start der App stellt ein Spieler den Server bereit und drückt
+
+Nach dem Start der App stellt ein Spieler den Server bereit und drückt
+
 auf den Button 'Server'.
-Der Mitspieler kann dem Spiel beitreten indem er auf den Button 'Client'
+
+Der Mitspieler kann dem Spiel beitreten, indem er auf den Button 'Client'
+
 drückt und die IP-Adresse des Anderen eingibt.
+
 Diese ist bei dem Hotspot-gebenden Handy in etwa unter:
+
 'Einstellungen > Anbindung und mobiler Hotspot > Einstellungen
+
 für WLAN-Hotspot > Verbundene Geräte' zu finden.
 
+
+
 Spielablauf:
-Ziel des Spieles ist es als Erster das Ziel in der linken oberen
+
+Ziel des Spieles ist es, als Erster das Ziel in der linken oberen
+
 Ecke zu erreichen.
-Es wird per Zufall ausgewählt welcher Spieler beginnen darf.
-Zum Würfeln kann entweder das Handy geschüttelt werden, oder einfach
-auf das '?-Zeichen' bzw. den Würfel gedrückt werden.
+
+Es wird per Zufall ausgewählt, welcher Spieler beginnen darf.
+
+Zum Würfeln kann entweder das Handy geschüttelt, oder einfach
+
+auf das '?' bzw. den Würfel gedrückt werden.
+
 Doch Vorsicht! Auf dem Weg begegnet man entweder Portalen,
+
 Monstern oder Ereignisfeldern.
+
 Portale sind sehr nützlich, mit ihrer Hilfe kann man sich von einem
+
 Ort zum nächsten teleportieren und darf daher mehrere Felder vorrücken.
-Monster hingegen sind keine Hilfe, du musst vor ihnen flüchten
-um nicht gefressen zu werden. Daher muss man hier mehrere Felder
-zurücksetzen.
-Bei einem Ereignisfeld musst man eine gewisse Frage beantworten,
-macht man dies richtig, darf man 4 Felder vor.
-Falls man hier versagt, muss man 4 Felder zurückgehen.
-Aber Achtung. Bei einem Ereignisfeld hat man die Möglichkeit zu
-schummeln, indem man einfach noch mehr als die 4 Felder vorgeht.
-Doch wer erwischt wird. Muss eine Runde aussetzen!
-An der Seite des Spielfelds findet man den Button zum aufdecken.
-Diesen kann man drücken, wenn man die Vermutung hat, dass der Gegner
-schummelt. Doch drückt man diesen und der Gegner hat nicht geschummelt,
-dann muss man selbst eine Runde aussetzen!
-Und nun VIEL SPAß beim SPIELEN!!! :)
-"
+
+Monster hingegen sind keine Hilfe, man muss vor ihnen flüchten,
+
+um nicht gefressen zu werden. Falls man doch auf ein Monster trifft, muss
+
+man mehrere Felder zurücksetzen.
+
+Auf einem Ereignisfeld ist eine Frage zu beantworten.
+
+Macht man dies richtig, darf man 4 Felder vor,
+
+falls nicht, muss man 4 Felder zurückgehen.
+
+Aber Achtung! Auf unsichtbaren Ereignisfeldern hat man die Möglichkeit zu
+
+schummeln, indem man 6 Felder vorrückt.
+
+Doch wer erwischt wird, kann das gesamte weitere Spiel nicht mehr schummeln.
+
+An der Seite des Spielfeldes findet man während der andere Spieler schummelt
+ eine Sekunde lang einen Button, durch den man das
+
+Schummeln des Gegners enttarnen kann.
+
+Und nun VIEL SPAß beim SPIELEN!!!! :)"
+
                 tools:layout_editor_absoluteX="8dp"
                 tools:layout_editor_absoluteY="17dp"></TextView>
         </ScrollView>
@@ -173,7 +204,7 @@ Und nun VIEL SPAß beim SPIELEN!!! :)
                 android:id="@+id/txtCredits"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="T_Industries besteht aus: Michael Kloss​, Engin Orhan, Daniel Rieder, Jasmin Stuck,sowie Sarah Wachter"
+                android:text="T_Industries besteht aus: Michael Kloss​, Engin Orhan, Daniel Rieder, Jasmin Stuck und Sarah Wachter"
                 tools:layout_editor_absoluteX="150dp"
                 tools:layout_editor_absoluteY="255dp"></TextView>
         </ScrollView>
