Neue Spielanleitung, wegen veränderter Schummelfunktion.

--- a/app/src/main/res/layout/anleitung.xml
+++ b/app/src/main/res/layout/anleitung.xml
@@ -162,7 +162,7 @@ man mehrere Felder zurücksetzen.
 
 Auf einem Ereignisfeld ist eine Frage zu beantworten.
 
-Macht man dies richtig, darf man 4 Felder vor,
+Macht man dies richtig, darf man 4 Felder vorrücken,
 
 falls nicht, muss man 4 Felder zurückgehen.
 
@@ -170,10 +170,10 @@ Aber Achtung! Auf unsichtbaren Ereignisfeldern hat man die Möglichkeit zu
 
 schummeln, indem man 6 Felder vorrückt.
 
-Doch wer erwischt wird, kann das gesamte weitere Spiel nicht mehr schummeln.
+Doch wer erwischt wird, darf das gesamte weitere Spiel nicht mehr schummeln.
 
 An der Seite des Spielfeldes findet man während der andere Spieler schummelt
- eine Sekunde lang einen Button, durch den man das
+ einen Button, der eine Sekunde lang aufscheint und durch den man das
 
 Schummeln des Gegners enttarnen kann.
 
