- 4 verschiedene Grasfelder ( damit die normalen Felder nicht zu eintönig werden ) - Neues Array für die Grasfelder, was ( im setBoard ) mit Zufälligen Zahlen zwischen 1 und 4 vollgefüllt werden für die jeweilige Form - checkBoard wurde dementsprechend überarbeitet - Alle Buttons im App haben jetzt eine einheitliche Farbe

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorRed">#f00000</color>
+    <color name="colorYellow">#F3AE1B</color>
     <color name="colorBlack">#F111</color>
 </resources>
