--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,8 +9,8 @@
     </style>
 
     <style name="DarkMonster" parent="Theme.AppCompat.NoActionBar" >
-        <item name="android:textColorPrimary">@color/colorRed</item>
-        <item name="android:textColorSecondary">@color/colorRed</item>
+        <item name="android:textColorPrimary">@color/colorYellow</item>
+        <item name="android:textColorSecondary">@color/colorYellow</item>
         <item name="colorAccent">@android:color/darker_gray</item>
     </style>
 
